Update proof-of-coverage.mdx (#630)
Added update to new witness list shuffle in HIP15 section

--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -120,6 +120,7 @@ The HIPs themselves provide a rich explanation of these mechanisms, so you're en
 * For the Transmitters, the more witnesses, the more the Transmitter earns;
 * For the Witness, each additional witness past a total of four reduces what 
 is earned by each witness in that challenge.
+* A change made with the 2021.09.14.0 release randomly shuffles the valid received witness receipts, and selects (up to) 25 of those valid to write to the chain.
 
 **From HIP17** 
 * The Witness earns less if the number of Hotspots in the area of the Transmitter exceeds the "target density".
