--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -44,7 +44,7 @@ The fee schedule is as follows:
 * **assert location**: 500000 DC ($5)
 
 :::info
-Note:  These fees are not the same thing as Data Credits, and purchasing Data Credits in Console is not a method of paying this fee.  Instead, this fee needs to be paid by transferring funds from a wallet such as Binance or similar.
+Data Credits in your Helium Console organization cannot be used to pay blockchain onboarding and assert location fees for Hotspots. To onboard a Hotspot, you'll need to burn HNT for Data Credits to the wallet that owns the Hotspot.
 :::
 
 ## Pre-requisites
