--- a/docs/use-the-network/coverage-mapping/mappers-roadmap.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-roadmap.mdx
@@ -1,5 +1,5 @@
 ---
-id: Mappers Roadmap
+id: mappers-roadmap
 sidebar_label: Mappers Roadmap
 slug: /use-the-network/coverage-mapping/mappers-roadmap
 ---
