--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -76,7 +76,8 @@ some of the code that makes it possible.
 
 ### Mobile Apps, Web Apps, and Sites
 
-- [Helium Mobile Wallet](#) - #SOON
+- [Helium Mobile Wallet](https://github.com/helium/hotspot-app) - Helium hotspot
+  app for iOS and Android.
 
 - [Helium Blockchain Explorer](https://github.com/helium/explorer) - Code that
   powers the greatest block explorer in the crypto world.
@@ -86,3 +87,6 @@ some of the code that makes it possible.
   
    - [Installation](/open-source/docs/installation) - How to install the needed components 
    to start helping docs development.
+
+- [Helium Mappers](https://github.com/helium/mappers/) - Community generated 
+  coverage map of the Helium network using real-world testing.
