--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -16,8 +16,10 @@ View Mappers data at [mappers.helium.com](https://mappers.helium.com/). The Mapp
 Be sure to check out the ongoing conversation in the dedicated `#mappers` channel on the [Helium Discord Server](https://discord.gg/helium).
 
 ## Mappers Newsletter
-
 Join the Mappers [newsletter](https://www.helium.com/mappers) to stay up to date on new and upcoming features.
+
+## Project Roadmap
+Take a look at the big picture in the [Mappers Roadmap](/use-the-network/coverage-mapping/mappers-roadmap). The roadmap is a great way to understand the full scope of the project and find an area to make your own contributions to the project.
 
 ## Frequently Asked Questions
 
@@ -28,7 +30,7 @@ In order to place a mark on the map, the mapper device sends out a signal with a
 
 ### Why should I contribute to Mappers?
 There are a variety of ways that Mapping is valuable to both hotspot owners and network users.
-For hotspot owners, the collected data helps to visualize the coverage provided by all Helium hotspots - identifying areas where coverage is lacking or even where hotspot placements could be made that would participate in Proof of Coverage with other hotspots. A marked hex on the map indicates that uplink signals from registered Helium Lorawan sensors have been proven to be “heard” by the Helium network somewhere within that hex shaped area.
+For hotspot owners, the collected data helps to visualize the coverage provided by all Helium hotspots - identifying areas where coverage is lacking or even where hotspot placements could be made that would participate in Proof of Coverage with other hotspots. A marked hex on the map indicates that uplink signals from registered Helium LoRaWAN sensors have been proven to be “heard” by the Helium network somewhere within that hex shaped area.
 
 For network users, the map proves the real-world coverage that hotspots provide. This is like looking at the Verizon or T-Mobile map when evaluating phone plans, but for business users. This real world evidence at the scale and resolution offered by our map gives prospective network users the information they need to make decisions about their deployments.
 As an example, this map is what someone like Lime scooters would look to before they sign a contract. 
