--- a/docs/use-the-network/policies/privacy.mdx
+++ b/docs/use-the-network/policies/privacy.mdx
@@ -14,7 +14,7 @@ By using the Site or otherwise providing information to Helium, you agree to our
 
 Our Privacy Policy does not apply to products or services offered by other companies, individuals or business partners, or to information that you provide or that is collected by third parties using our technologies. These third parties may have their own privacy policies, which we encourage you to read before providing information to them.
 
-## This policy describes:
+## This policy describes
 
 What personally identifiable information we collect from you, how it is used and with whom it may be shared.
 The security procedures in place to protect the misuse of your information.
@@ -27,9 +27,9 @@ We may collect personal identification information from Users in a variety of wa
 ## Information You Give Us
 
 We will collect the personal information that you provide us. For example, we will ask you to provide personal information such as your name, address, email address, telephone number, and credit or debit card information as part of normal business transactions. Users may provide Helium information in the following scenarios:
-- Registration - In order to use certain parts of the Site, you must first register. The registration form requires Users to give certain information (such as name and email address). At your option, you also may provide demographic information (such as your gender or age) about yourself, but it is not required.
-- Orders - To purchase products or items from us, you must provide contact information (like name and shipping address) and financial information (like credit card number and expiration date).
-- Surveys & other communications - From time-to-time our Site may request information. Participation in these is completely voluntary, and you may choose whether or not to participate and therefore disclose this information. Information requested may include contact information (such as name and shipping address) and demographic information (such as zip code, age level). Contact information may be used to market to you about third party products and services. Your information also may be provided to third parties. Information may also be used for purposes of monitoring or improving the use and satisfaction of the Site, as well as for public posting and product reviews by other users.
+- _Registration_ - In order to use certain parts of the Site, you must first register. The registration form requires Users to give certain information (such as name and email address). At your option, you also may provide demographic information (such as your gender or age) about yourself, but it is not required.
+- _Orders_ - To purchase products or items from us, you must provide contact information (like name and shipping address) and financial information (like credit card number and expiration date).
+- _Surveys & other communications_ - From time-to-time our Site may request information. Participation in these is completely voluntary, and you may choose whether or not to participate and therefore disclose this information. Information requested may include contact information (such as name and shipping address) and demographic information (such as zip code, age level). Contact information may be used to market to you about third party products and services. Your information also may be provided to third parties. Information may also be used for purposes of monitoring or improving the use and satisfaction of the Site, as well as for public posting and product reviews by other users.
 
 ## Information we get from your use of our website or services
 
@@ -38,13 +38,13 @@ When you browse or use our Site, we and our third party service providers collec
 ## How we use and share collected information
 
 Helium collects information to provide our services to you in the performance of a contract with you, or for our legitimate interests in better understanding our customer’s interactions and to create better products and services. We also share personal information we collect from the site to third parties that assist us in supporting us in providing our services, in understanding how you use our Site, and to provide advertising to us and on our behalf. These third parties are obligated to protect the information they process on our behalf in accordance with our policies and applicable law, and include: FullStory, Intercom, as well as the Google Analytics Advertising Feature. Specifically, Helium collects and uses Users' personal information for the following purposes:
-- To improve customer service - Your information helps us to more effectively respond to your customer service requests and support needs. We and our service providers, such as Intercom, assist us in processing your request including through our chat box feature, which we offer for your use and convenience.
-- To improve our Site - We continually strive to improve our Site offerings based on the information and feedback we receive from you. For example, we and our service providers, including FullStory, to provide faster and better support to your customers and aid our engineering team in solving bugs and improving the user experience.
-- To process transactions - We will use the information you provide to process your order. We do not share this information with outside parties except to the extent necessary to provide the service.
-- To send periodic emails - Your email address will be used to send you information and updates pertaining to your order. It also may be used to respond to your inquiries. If you decide to opt-in to our mailing list, you will receive emails that may include company news, updates, related product or service information, etc. If at any time you would like to unsubscribe from receiving future emails, we include detailed unsubscribe instructions at the bottom of each email or you may contact us via our Site.
-- Protect our rights or comply with legal process - We may disclose your personal information to enforce our rights arising from any contracts entered into between you and Helium; to comply with any court order, legal process, or respond to any governmental or regulatory request; or to protect Helium's rights or property or the safety of Helium, our customers, employees, or others.
-- Sale or merger - We also may disclose your personal information to a buyer or other successor in the event of a merger, acquisition, divestiture, restructuring, reorganization, dissolution, or other sale or transfer of Helium’s assets.
-- To market other products of Services to You - We may use your personal information in association with third party vendors, marketing firms or other companies to market or sell other non Helium products or services. For example, through Google Ads and Google Analytics, we create remarketing audiences based on specific user behavior, demographic information and interest data, and share those list with Adwords. We also use demographic and interest data in analytics reports to create automated profiles for marketing purposes. We create segments based on demographic and interest data. We and our third party vendors, including Google, will use this information to show you ads on sites across the Internet. We may also use cookies to serve ads based on your past visits to our website.
+- _To improve customer service_ - Your information helps us to more effectively respond to your customer service requests and support needs. We and our service providers, such as Intercom, assist us in processing your request including through our chat box feature, which we offer for your use and convenience.
+- _To improve our Site_ - We continually strive to improve our Site offerings based on the information and feedback we receive from you. For example, we and our service providers, including FullStory, to provide faster and better support to your customers and aid our engineering team in solving bugs and improving the user experience.
+- _To process transactions_ - We will use the information you provide to process your order. We do not share this information with outside parties except to the extent necessary to provide the service.
+- _To send periodic emails_ - Your email address will be used to send you information and updates pertaining to your order. It also may be used to respond to your inquiries. If you decide to opt-in to our mailing list, you will receive emails that may include company news, updates, related product or service information, etc. If at any time you would like to unsubscribe from receiving future emails, we include detailed unsubscribe instructions at the bottom of each email or you may contact us via our Site.
+- _Protect our rights or comply with legal process_ - We may disclose your personal information to enforce our rights arising from any contracts entered into between you and Helium; to comply with any court order, legal process, or respond to any governmental or regulatory request; or to protect Helium's rights or property or the safety of Helium, our customers, employees, or others.
+- _Sale or merger_ - We also may disclose your personal information to a buyer or other successor in the event of a merger, acquisition, divestiture, restructuring, reorganization, dissolution, or other sale or transfer of Helium’s assets.
+- _To market other products of Services to You_ - We may use your personal information in association with third party vendors, marketing firms or other companies to market or sell other non Helium products or services. For example, through Google Ads and Google Analytics, we create remarketing audiences based on specific user behavior, demographic information and interest data, and share those list with Adwords. We also use demographic and interest data in analytics reports to create automated profiles for marketing purposes. We create segments based on demographic and interest data. We and our third party vendors, including Google, will use this information to show you ads on sites across the Internet. We may also use cookies to serve ads based on your past visits to our website.
 
 We retain the information we collect for as long as we needed for the above mentioned legitimate business purposes.
 
