--- a/docs/use-the-network/policies/terms.mdx
+++ b/docs/use-the-network/policies/terms.mdx
@@ -8,13 +8,13 @@ slug: /use-the-network/policies/terms
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Effective as of xx
+Effective as of 09/30/2021
 
 Helium, Inc ("Helium," "we," "us," or "our") welcomes and thanks you for using our service (the "Service") made available through our website (the "Website").
 We provide access to and use of our Service subject to the following terms of service (the "Terms of Service"), which are effective as of the date stated above. By using the Service, you acknowledge that you have read, understood, and agree to be legally bound by the terms and conditions of these Terms of Service and the terms and conditions of our Privacy Policy, which is hereby incorporated by reference. Please take the time to review our Privacy Policy. If you do not agree to any terms in these Terms of Service or the Privacy Policy, then please do not use our Service.
 We may change these Terms of Service from time to time, and will post any changes on the Website or notify you via email, at our option, as soon as such changes are in effect. If you are using the Service on a free trial basis, then by continuing to use the Service after we make any such changes to the Terms of Service, you are deemed to have accepted such changes. If you have purchased a Service subscription, then the changes will not go into effect until your Service subscription renews. Please refer back to these Terms of Service on a regular basis.
 
-## Access and Useya
+## Access and Use
 
 Subject to the terms and conditions of this Agreement, Helium will provide access to and use of the Service to you or the entity which you have authority to bind to this Agreement ("Subscriber"). We will also provide access to and use of the Service to any employee of Subscriber or other individual authorized by Subscriber (each, an "Authorized User"). Subscriber acknowledges that each Authorized User must agree to these Terms of Service and the Privacy Policy prior to use and that Subscriber shall be responsible for ensuring compliance by each Authorized User with these Terms of Service and for any breach of these Terms of Service by any Authorized User.
 Subscriber is solely responsible for any data or content uploaded or stored on the Service by Subscriber or any Authorized User ("Subscriber Data"). In no event shall Helium be responsible for the use or misuse of any Subscriber Data by Subscriber or any Authorized User or other third party. Subscriber warrants and represents that it either owns or has the right to provide all Subscriber Data. Subscriber hereby grants Helium a non-exclusive, transferable, royalty-free license to use the Subscriber Data to provide the Service and as otherwise described in herein or in our Privacy Policy. As stated in the Privacy Policy, we take reasonable steps to protect the Subscriber Data from loss, misuse, and unauthorized access, disclosure, alteration, or destruction. For the avoidance of doubt, in no event will we share the project information that you upload into the Service with third parties for marketing purposes.
@@ -28,16 +28,19 @@ Prior to using the Service, Subscriber will be required to register for an accou
 
 The payment model is a pay-per-usage model and additional service costs may be bundled into the price of usage. 
 Regardless of the service level, users pay based on traffic sent and depending on the services level or the offering a markup may be applied to the base packet transfer costs defined by the blockchain.
+
 Besides the hosting of backend infrastructure, these services could include a front-end interface designed for users to manage the offering, a dashboard to monitor traffic, user permissions, and the ability to directly pay for Data Credits which are required to transfer packets on the network.
 If a credit card is used you must provide accurate information regarding your credit card or other payment instrument, and you must promptly update your payment information if such information changes. You hereby authorize Helium’s payment processor to periodically bill your payment instrument in advance, in accordance with the payment plan you have selected. If you wish to dispute any charges, you must provide notice to Helium of such dispute within sixty (60) days of payment of the disputed charge. All amounts paid are non-refundable.
+
 We reserve the right to change our prices at any point. If we do change prices, we will provide notice to you through the Website or via email, at our option, at least thirty (30) days before such change is to take effect. Your continued use of the Service after the price change constitutes your agreement to pay the changed amount.
 If billing via invoice is an option all amounts due must be paid by the date specified in the invoice or access and use of the Service may be terminated. Unpaid invoices are subject to a finance charge of 1.5% per month on any outstanding balance, or the maximum permitted by law, whichever is lower, plus all expenses of collection. You shall be responsible for all taxes associated with the Service other than U.S. taxes based on Helium's net income.
 
 ## Data Credits
 
 Data Credits can only be used for connectivity of devices, they can be thought of similar to mobile minutes for a pre-paid cell phone only instead of voice data, it’s packet data from sensors.
-Like mobile minutes, Data Credits are non-transferrable by design. Data Credits have a core fixed price defined by the blockchain: 1 data credit costs = $0.00001.
-Data Credits are not currency, cannot be monetized, resold, or converted into anything.
+Like mobile minutes, Data Credits are non-transferrable by design. 
+
+Data Credits have a core fixed price defined by the blockchain: 1 data credit costs = $0.00001. Data Credits are not currency, cannot be monetized, resold, or converted into anything.
 
 ## Publicity
 
@@ -49,15 +52,14 @@ Helium may suspend or terminate your access to and use of the Service, in whole 
 Helium may terminate this agreement upon written notice if Helium determines, in its sole and absolute discretion, that Customer has engaged in or permitted behavior that Helium considers to be immoral, racist, or discriminatory on the basis of race, ethnicity, national origin, caste, sexual orientation, gender, gender identity, religious affiliation, age, disability, or serious disease.
 
 ## DISCLAIMERS; LIMITED WARRANTY
-THE HELIUM PROPERTY IS PROVIDED "AS IS" AND "AS AVAILABLE," AND HELIUM DOES NOT MAKE ANY WARRANTIES WITH RESPECT TO THE SAME OR OTHERWISE IN CONNECTION WITH THESE TERMS OF SERVICE AND HEREBY DISCLAIMS ANY AND ALL EXPRESS, IMPLIED, OR STATUTORY WARRANTIES, INCLUDING, WITHOUT LIMITATION, ANY WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AVAILABILITY, ERROR-FREE OR UNINTERRUPTED OPERATION, AND ANY WARRANTIES ARISING FROM A COURSE OF DEALING, COURSE OF PERFORMANCE, OR USAGE OF TRADE. TO THE EXTENT THAT HELIUM MAY NOT AS A MATTER OF APPLICABLE LAW DISCLAIM ANY IMPLIED WARRANTY, THE SCOPE AND DURATION OF SUCH WARRANTY WILL BE THE MINIMUM PERMITTED UNDER SUCH LAW.
+
+THE PRODUCTS, THE SERVICE, ANY OTHER DELIVERABLES AND HELIUM CONTENT ARE PROVIDED "AS IS" AND WITHOUT ANY EXPRESS OR IMPLIED REPRESENTATIONS OR WARRANTIES REGARDING ACCURACY, OPERABILITY, USE, TITLE, NON-INFRINGEMENT, MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE, AND EACH PARTY HEREBY DISCLAIMS ALL REPRESENTATIONS AND WARRANTIES OF ANY KIND REGARDING THE PRODUCTS, SERVICES, DELIVERABLES AND HELIUM CONTENT, EXPRESS OR IMPLIED, INCLUDING ANY WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, TITLE OR NON-INFRINGEMENT OR THAT THEIR USE WILL PRODUCE ANY RESULTS, FINANCIAL OR OTHERWISE.
 
 ## LIMITATION OF LIABILITY 
-IN NO EVENT WILL HELIUM BE LIABLE TO SUBSCRIBER OR ANY OTHER PARTY, INCLUDING, WITHOUT LIMITATION, ANY AUTHORIZED USER, FOR ANY INCIDENTAL, INDIRECT, CONSEQUENTIAL, SPECIAL, EXEMPLARY, OR PUNITIVE DAMAGES OF ANY KIND (INCLUDING, BUT NOT LIMITED TO, LOST REVENUES OR PROFITS) ARISING FROM OR RELATING TO THE HELIUM PROPERTY OR OTHERWISE RELATING TO THESE TERMS OF SERVICE, REGARDLESS OF WHETHER HELIUM WAS ADVISED, HAD OTHER REASON TO KNOW, OR IN FACT KNEW OF THE POSSIBILITY THEREOF. HELIUM'S AGGREGATE LIABILITY FOR DIRECT DAMAGES UNDER THESE TERMS OF SERVICE WILL NOT EXCEED THE TOTAL FEES PAID BY SUBSCRIBER HEREUNDER DURING THE SIX (6) MONTHS IMMEDIATELY PRIOR TO THE EVENT GIVING RISE TO THE CLAIM.
+ HELIUM SHALL NOT BE LIABLE TO CUSTOMER OR ANY THIRD PARTY FOR SPECIAL, PUNITIVE, EXEMPLARY OR CONSEQUENTIAL DAMAGES OR LOST PROFITS (HOWEVER ARISING, INCLUDING NEGLIGENCE) ARISING OUT OF OR IN CONNECTION WITH THIS AGREEMENT, EVEN IF HELIUM HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES, AND FOR DAMAGES ARISING OUT OR IN CONNECTION WITH THIS AGREEMENT IN THE AGGREGATE IN EXCESS OF THE FEES PAID OR PAYABLE BY CUSTOMER PURSUANT TO THIS AGREEMENT.
 
 ## Indemnification
 Subscriber will defend, indemnify, and hold harmless Helium and its officers, directors, managers, and employees from any and all liabilities, costs, and expenses (including, without limitation, reasonable attorneys' fees) in connection with any third-party claim that any of the Subscriber Data: (i) infringes or misappropriates any third-party intellectual property rights, privacy or publicity rights, or any other rights; or (ii) violates any applicable laws, rules, or regulations. Helium shall promptly notify Subscriber of the claim, provided, however, that failure to provide such notice shall not relieve Subscriber of its indemnity obligations unless it is materially prejudiced thereby. Subscriber shall have control over the defense of the claim, provided that (i) Subscriber does not make any admission of liability on behalf of Helium or agree to any settlement that imposes a financial burden on Helium without Helium's prior written consent; and (ii) Helium shall have the right to participate in the defense of any such claim, at its own cost, with counsel of its choice.
 
 ## General Provisions
-Subscriber shall not assign these Terms of Service or any of its rights hereunder without the prior, written consent of Helium. Subject to the foregoing, this Agreement will be binding upon and inure to the benefit of the Parties hereto and their permitted successors and assigns. These Terms of Service and performance hereunder shall be construed and governed by the laws of the State of New York without giving effect to conflicts of laws principles. The parties consent and agree that any and all litigation between them arising from these Terms of Service or the business relationship created hereby shall take place in the state or federal courts located in New York, New York. Each Party irrevocably consents and submits to the jurisdiction and venue of any such courts. If any provision of these Terms of Service is deemed invalid or unenforceable, it shall be amended or replaced in the way that best reflects the original intention of the parties, and the remainder of these Terms of Service shall remain in full force and effect. These Terms of Service, together with the Privacy Policy and any pricing information made known to you at registration, constitute the final and complete agreement between the parties regarding the subject matter hereof, and supersedes any prior or contemporaneous communications, representations, or agreements between the parties, whether oral or written.
-
-Last Revised: 09/30/2021
+This Agreement is governed by the laws of the State of California, without regard to conflict of law rules. The UN Convention on Contracts for the International Sale of Goods will not apply to this Agreement. The parties shall bring any disputes arising out of or related to this Agreement exclusively in a court located in San Francisco County, California and each party hereby submits to the personal jurisdiction of such courts.  Each party is an independent contractor and neither party's personnel are employees or agents of the other party for any purpose whatsoever. Nothing hereunder will constitute, create, give effect to or otherwise recognize a joint venture, partnership or business entity of any kind, nor will anything hereunder constitute either party as the agent or representative of the other. Headings are for convenience. No presumption is to operate in either party's favor as a result of who drafted this Agreement. For purposes of this Agreement, the words "include," "includes" and "including" are deemed to be followed by the words "without limitation," and the word "or" is not exclusive. This Agreement supersedes all prior discussions and writings regarding (and constitutes the entire agreement between the parties with respect to) the subject matter of this Agreement. This Agreement is effective upon Customer's purchase of the Product. The parties may only amend this Agreement in writing. If any provision of this Agreement is for any reason held to be invalid, illegal, or unenforceable under applicable law in any respect, then such invalidity, illegality, or unenforceability will not affect the other provisions of this Agreement, this Agreement will be construed as if such invalid, illegal, or unenforceable provision were excluded from this Agreement, and the court in its discretion may substitute for the excluded provision an enforceable provision which in economic substance reasonably approximates the excluded provision.
