--- a/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
@@ -26,6 +26,11 @@ process evolves. :::
 
 ## Getting started
 
+This process assumes you have some basic Linux skills, can use a text editor and
+understand what a service is. You should be able to learn how to use programs
+like `scp` to move data between the Raspberry Pi and your other computers on
+your network.
+
 ### Hardware
 
 - Raspberry Pi 4. Other faimilies of Pi may work, but this has only been tested
@@ -53,11 +58,25 @@ We will be using the following:
 If you haven't done so, attach the Dragino PG1301 to the Raspberry Pi with the
 power off, then power on.
 
-## Install the LoRa Packet Forwarder
+## Install the LoRa Packet Forwarder Service
 
 1. Download lorapktfwd.deb from the
    [Dragino Downloads Site](https://www.dragino.com/downloads/index.php?dir=LoRa_Gateway/PG1301/software/)
 2. Install the package: `sudo pkg -i lorapktfwd.deb`
+
+I highly suggest using a hard-wired Ethernet connection to your Raspberry Pi,
+enable SSH to remotely connect to the Pi, and turning off the Wireless and
+Bluetooth services to free up cycles and any device conflicts.
+
+To disable Wireless and Bluetooth, edit the file `/boot/config.txt` and add the
+following:
+
+```
+dtoverlay=disable-wifi
+dtoverlay=disable-bt
+```
+
+Be sure to reboot for the changes to take effect.
 
 ## Configure the LoRa Packet Forwarder
 
@@ -67,27 +86,40 @@ locale configuration in Step 2.
 1. Change directory to the /etc/lora-gateway directory: `cd /etc/lora-gateway`
 2. Copy the US915 Band 2 configuration from the cfg subdirectory as
    global_conf.json: `cp cfg/dragino/global_conf.us915_1.json global_conf.json`
-3. Generate a unique gateway ID from the Ethernet MAC address. You can use the
-   following bash code to generate your gateway ID and save it to a file called
-   `gateway-eui`
-   ``` 
-   $ echo `ip a | grep 'link/ether' | cut -d ' ' -f 6 | sed 's/://g'`ffff | tr a-z A-Z > gateway-eui 
+3. Generate a unique gateway ID from the Ethernet MAC address: `echo `ip a |
+   grep 'link/ether' | cut -d ' ' -f 6 | sed
+   's/://g'`ffff | tr a-z A-Z > gateway-eui` The command will generate your
+   unique gateway ID and save it to a file called `gateway-eui`. Example:
+   ```
+   $ echo `ip a | grep 'link/ether' | cut -d ' ' -f 6 | sed 's/://g'`ffff | tr a-z A-Z > gateway-eui
    $ cat gateway-eui
-   DCA6328BF66FFFFF
+   DCA632XXXXXXFFFF
    ```
-4. Use a text editor and open the /etc/lora-gateway/local_conf.json
+4. Use a text editor and open the /etc/lora-gateway/local_conf.json file. Here
+   you will set your gateway ID, and point the LoRa Packet Forwarder to talk to
+   the helium gateway service we will install in the next steps. Example:
    ```
-   { "gateway_conf": { "gateway_ID": "DCA6328BF66FFFFF", "server_address": "127.0.0.1", "serv_port_up": 1680, "serv_port_down": 1680 } } 
+   {
+     "gateway_conf": {
+          "gateway_ID": "DCA632XXXXXXFFFF",
+          "server_address": "127.0.0.1",
+          "serv_port_up": 1680,
+          "serv_port_down": 1680
+     }
+   }
    ```
+   For reference, server address is the local machine (localhost) and port 1680
+   is the port the helium service is communicating on.
 5. Restart/Start the LoRa Packet Forwarder service:
    `sudo systemctl restart lorapktfwd.service`
 6. Verify the service is running: `sudo systemctl status lorapktfwd.service`
-7. View the log to verify it is working correctly:
+7. View the log in real time to verify it is working correctly:
    `journalctl -f -u lorapktfwd.service` . Use Ctrl-C to exit the running log.
 8. Enable the LoRa Packet Forwarder to start up at boot time:
-   `sudo systemctl enable lorapktfwd.service`
+   `sudo systemctl enable lorapktfwd.service` . If the service is already
+   enabled at boot, the command will return no output.
 
-## Install Helium Gateway
+## Install the Helium Gateway Service
 
 1. Download latest helium-gateway release package from
    https://github.com/helium/gateway-rs/releases ending in -raspi234.deb
@@ -95,10 +127,20 @@ locale configuration in Step 2.
    `sudo dpkg -i helium-gateway-v1.0.0-alpha.16-raspi234.deb` (Replace
    helium-gateway-v1.0.0-alpha.16-raspi234.deb) with the version you downloaded.
 3. Verify the service is running: `sudo systemctl status helium_gateway`
-4. View the log to verify it is working correctly:
+4. View the log in real time to verify it is working correctly:
    `journalctl -f -u helium_gateway`
+5. If the service is not running, start it with
+   `sudo systemctl start helium_gateway`
+6. To enable the helium gateway service to start at boot time, run
+   `sudo systemctl enable helium_gateway` . If the service is already enabled at
+   boot, the command will return no output.
 
-Congradulations, your LoRa Packet Forwarder and Gateway service is setup!
+Congradulations, your LoRa Packet Forwarder and Gateway service is setup! At
+this point your LoRa radio will be able to pass radio traffic between the
+network and the helium gateway. Any devices you registered via the Helium
+console should now be live. Your hotspot will not appear on the map. Before
+adding your hotspot to the blockchain, please check and backup your
+configuration.
 
 ## Check and Backup your Configuration
 
@@ -106,8 +148,10 @@ Congradulations, your LoRa Packet Forwarder and Gateway service is setup!
    name assigned to you. Example:
    ```
    $ helium_gateway key info
-   { "address": "13XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX", 
-     "name": "unique-animal-name" }
+   {
+   "address": "13XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+   "name": "unique-animal-name"
+   }
    ```
 2. Backup your gateway key to another machine for recovery purposes. The file
    `/etc/helium_gateway/gateway_key.bin` contains the key.
@@ -117,4 +161,8 @@ anymore in case there is a problem on your hostpot (SD card corrupted, etc). You
 will need to generate a new key and lose your existing animal name/hostpot
 configuration :::
 
+## What's next?
 
+At this point, your Data Only Hotspot is ready to be added to the blockchain!
+You can find more information about that process
+[here](/mine-hnt/data-only-hotspots#pre-requisites).
