--- a/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
@@ -36,6 +36,8 @@ your network.
 - Raspberry Pi 4. Other faimilies of Pi may work, but this has only been tested
   on the Pi 4 Model B.
 - [Dragino 10 channels - LoRaWAN GPS Concentrator for Raspberry Pi](https://www.dragino.com/products/lora/item/149-lora-gps-hat.html)
+- Raspberry Pi is accessing the network via the Ethernet port
+
 
 ### Software
 
@@ -55,18 +57,8 @@ We will be using the following:
    from the terminal window with `sudo raspi-config`
 2. Reboot and verify the changes
 
-If you haven't done so, attach the Dragino PG1301 to the Raspberry Pi with the
-power off, then power on.
-
-## Install the LoRa Packet Forwarder Service
-
-1. Download lorapktfwd.deb from the
-   [Dragino Downloads Site](https://www.dragino.com/downloads/index.php?dir=LoRa_Gateway/PG1301/software/)
-2. Install the package: `sudo pkg -i lorapktfwd.deb`
-
-I highly suggest using a hard-wired Ethernet connection to your Raspberry Pi,
-enable SSH to remotely connect to the Pi, and turning off the Wireless and
-Bluetooth services to free up cycles and any device conflicts.
+I highly suggest enabling SSH to remotely connect to the Pi, and turning off the Wireless and
+Bluetooth services to free up cycles and avoid any device conflicts.
 
 To disable Wireless and Bluetooth, edit the file `/boot/config.txt` and add the
 following:
@@ -78,6 +70,15 @@ dtoverlay=disable-bt
 
 Be sure to reboot for the changes to take effect.
 
+If you haven't done so, attach the Dragino PG1301 to the Raspberry Pi with the
+power off, then power on.
+
+## Install the LoRa Packet Forwarder Service
+
+1. Download lorapktfwd.deb from the
+   [Dragino Downloads Site](https://www.dragino.com/downloads/index.php?dir=LoRa_Gateway/PG1301/software/)
+2. Install the package: `sudo pkg -i lorapktfwd.deb`
+
 ## Configure the LoRa Packet Forwarder
 
 These steps assume the US915 region. For other regions, replace with your region
@@ -86,10 +87,11 @@ locale configuration in Step 2.
 1. Change directory to the /etc/lora-gateway directory: `cd /etc/lora-gateway`
 2. Copy the US915 Band 2 configuration from the cfg subdirectory as
    global_conf.json: `cp cfg/dragino/global_conf.us915_1.json global_conf.json`
-3. Generate a unique gateway ID from the Ethernet MAC address: `echo `ip a |
-   grep 'link/ether' | cut -d ' ' -f 6 | sed
-   's/://g'`ffff | tr a-z A-Z > gateway-eui` The command will generate your
-   unique gateway ID and save it to a file called `gateway-eui`. Example:
+3. Generate a unique gateway ID from the Ethernet MAC address: 
+   ```
+   echo `ip a | grep 'link/ether' | cut -d ' ' -f 6 | sed 's/://g'`ffff | tr a-z A-Z > gateway-eui
+   ```
+   This command will generate your unique gateway ID and save it to a file called `gateway-eui`. Example:
    ```
    $ echo `ip a | grep 'link/ether' | cut -d ' ' -f 6 | sed 's/://g'`ffff | tr a-z A-Z > gateway-eui
    $ cat gateway-eui
