Add paragraph about what we are doing

--- a/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
@@ -30,12 +30,19 @@ This process assumes you have some basic Linux skills, can use a text editor and
 understand what a service is. You should be able to use programs like `scp` to
 move data between the Raspberry Pi and other computers on your network.
 
+What we will be doing is :
+
+- installing the LoRa Packet Forwarder service from Dragino to use the
+  Concentrator hat
+- installing the Helium Gateway service to move data between the packet
+  forwarder and the Helium network
+
 ### Hardware
 
 - Raspberry Pi 4. Other faimilies of Pi may work, but this has only been tested
   on the Pi 4 Model B.
 - [Dragino 10 channels - LoRaWAN GPS Concentrator for Raspberry Pi](https://www.dragino.com/products/lora/item/149-lora-gps-hat.html)
-- Raspberry Pi is accessing the network via the Ethernet port
+- Raspberry Pi is accessing the IP network via the Ethernet port
 
 ### Software
 
