--- a/docs/use-the-network/console/integrations/azure.mdx
+++ b/docs/use-the-network/console/integrations/azure.mdx
@@ -12,6 +12,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 To help ensure stable device connectivity only use Console to connect to client ids. Other device monitoring tools in IoT Hub will connect to the device using the same client id which will cause connectivity instability. 
 
+:::important 
+For more information getting started with the Azure IoT Hub integration, check out our Tips & Tricks video on YouTube [here](https://youtu.be/emJ88cGF-Ew).
+:::
+
 ## On Azure IoT Hub
 Prior to setting up an integration in Console, the following Azure IoT Hub information is required:
 
