--- a/docs/use-the-network/policies/terms.mdx
+++ b/docs/use-the-network/policies/terms.mdx
@@ -25,7 +25,7 @@ Prior to using the Service, Subscriber will be required to register for an accou
 ## Fees and Payment
 
 The payment model is a pay-per-usage model and additional service costs may be bundled into the price of usage. 
-Regardless of the service level, users pay based on traffic sent and depending on the services level or the offering a markup may be applied to the base packet transfer costs defined by the blockchain.
+Regardless of the service level, users pay based on traffic and depending on the services level or the offering a markup may be applied to the base packet transfer costs defined by the blockchain.
 
 Besides the hosting of backend infrastructure, these services could include a front-end interface designed for users to manage the offering, a dashboard to monitor traffic, user permissions, and the ability to directly pay for Data Credits which are required to transfer packets on the network.
 If a credit card is used you must provide accurate information regarding your credit card or other payment instrument, and you must promptly update your payment information if such information changes. You hereby authorize Helium’s payment processor to periodically bill your payment instrument in advance, in accordance with the payment plan you have selected. If you wish to dispute any charges, you must provide notice to Helium of such dispute within sixty (60) days of payment of the disputed charge. All amounts paid are non-refundable.
@@ -35,10 +35,10 @@ If billing via invoice is an option all amounts due must be paid by the date spe
 
 ## Data Credits
 
-Data Credits can only be used for connectivity of devices, they can be thought of similar to mobile minutes for a pre-paid cell phone only instead of voice data, it’s packet data from sensors.
+Data Credits can only be used for connectivity of devices. They can be thought of similar to mobile minutes for a pre-paid cell phone only instead of voice data, it’s packet data from sensors.
 Like mobile minutes, Data Credits are non-transferrable by design. 
 
-Data Credits have a core fixed price defined by the blockchain: 1 data credit costs = $0.00001. Data Credits are not currency, cannot be monetized, resold, or converted into anything.
+Data Credits have a core fixed price defined by the blockchain: one (1) data credit costs $0.00001. Data Credits are not currency, cannot be monetized, resold, or converted into anything.
 
 ## Publicity
 
