move dragino vid to proper loc

--- a/docs/mine-hnt/data-only-guides/dragino.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino.mdx
@@ -21,6 +21,10 @@ the latest updates.
 
 :::
 
+### Video Guide for Setup
+
+[![Link to YouTube tutorial explaining packet forwarder setup.](https://img.youtube.com/vi/OuujPVK8f3U/0.jpg)](https://www.youtube.com/watch?v=OuujPVK8f3U)
+
 ## Prerequisites
 
 Prior to configuring your Dragino to work with the Helium network, please
