- changed incorrect key values

--- a/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
@@ -1,8 +1,8 @@
 ---
 id: dragino-pg1301
 title: Data Only Hotspot Setup Dragino PG1301 and Raspberry Pi
-description: Dragino PG1301 + Raspberry Pi
-sidebar_label: /mine-hnt/data-only-guides/dragino-pg1301
+sidebar_label: Dragino PG1301 + Raspberry Pi
+slug: /mine-hnt/data-only-guides/dragino-pg1301
 ---
 
 # Data Only Hotspot Setup with Dragino PG1301 and Raspberry Pi
