--- a/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
@@ -17,12 +17,14 @@ Coverage Rewards.
 This guide covers all the steps needed to set up a Data Only Hotspot using a
 Raspberry Pi and Dragino PG1301 hat.
 
-:::warning Data Only Hotspots cannot earn $HNT, at least for now, and after
+:::
+warning Data Only Hotspots cannot earn $HNT, at least for now, and after
 milestone 2 they will earn $HNT only for Device Packet Transfer. Remember to
 keep an eye on [Light Hotspots - BETA](/mine-hnt/light-hotspots) and the
 **#gateway-development** channel on the
 [Helium Discord Server](https://discord.gg/helium) to check how the development
-process evolves. :::
+process evolves.
+:::
 
 ## Getting started
 
@@ -245,10 +247,12 @@ configuration.
 2. Backup your gateway key to another machine for recovery purposes. The file
    `/etc/helium_gateway/gateway_key.bin` contains the key.
 
-:::warning If you lose this key, you will not be able to use this hotspot
+:::
+warning If you lose this key, you will not be able to use this hotspot
 anymore in case there is a problem on your hostpot (SD card corrupted, etc). You
 will need to generate a new key and lose your existing animal name/hostpot
-configuration :::
+configuration
+:::
 
 ## Testing the packet transfer with an end device
 
@@ -269,9 +273,11 @@ Don't be surprised if you find some differences between those console flavors,
 basically staging is where the new features are tested before their rollout to
 production.
 
-:::important If the device you will use for testing is registered on the
+:::
+important If the device you will use for testing is registered on the
 production console, it's better to delete it from there to avoid any unexpected
-behavior. :::
+behavior.
+:::
 
 To register your end device on the console, you can follow the steps described
 on
