--- a/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
@@ -224,7 +224,7 @@ characters match up.
 ```
    {
      "gateway_conf": {
-          "gateway_ID": "DCA6328BF6XXFFFF",
+          "gateway_ID": "DCA6328XXX70FFFF",
           "server_address": "127.0.0.1",
           "serv_port_up": 1680,
           "serv_port_down": 1680
